jobs/job_60783810/uncert/errors/benchmark_242/solver_2.txt
INFO: Pointer analysis took 0 sec 0 ms
input.cc:38:7: warning: incompatible pointer to integer conversion initializing 'int' with an expression of type 'void *' [-Wint-conversion]
  int curr = NULL;
      ^      ~~~~
input.cc:53:12: warning: incompatible pointer to integer conversion assigning to 'int' from 'struct list *' [-Wint-conversion]
head_index = memory0[head_ptr];
           ^ ~~~~~~~~~~~~~~~~~
input.cc:57:31: error: use of undeclared identifier 'head'
  if (head == NULL || memory1[head].value >= m) {
                              ^
input.cc:57:7: error: use of undeclared identifier 'head'
  if (head == NULL || memory1[head].value >= m) {
      ^
input.cc:58:25: error: use of undeclared identifier 'head'
    memory1[new].next = head;
                        ^
input.cc:59:23: warning: incompatible integer to pointer conversion assigning to 'struct list *' from 'int' [-Wint-conversion]
    memory0[head_ptr] = new;
                      ^ ~~~
input.cc:63:14: error: use of undeclared identifier 'head'
  int curr = head;
             ^
input.cc:64:28: warning: comparison between pointer and integer ('int' and 'void *') [-Wpointer-integer-compare]
  while(memory1[curr].next != NULL && memory1[curr].next->value < m) {
        ~~~~~~~~~~~~~~~~~~ ^  ~~~~
input.cc:64:59: error: member reference type 'int' is not a pointer
  while(memory1[curr].next != NULL && memory1[curr].next->value < m) {
                                      ~~~~~~~~~~~~~~~~~~  ^
input.cc:71:23: error: use of undeclared identifier 'head'
  memory0[head_ptr] = head;
                      ^
4 warnings and 6 errors generated.
TUpqP_Ptr2Arr.c:38:7: warning: incompatible pointer to integer conversion initializing 'int' with an expression of type 'void *' [-Wint-conversion]
  int curr = NULL;
      ^      ~~~~
TUpqP_Ptr2Arr.c:53:12: warning: incompatible pointer to integer conversion assigning to 'int' from 'struct list *' [-Wint-conversion]
head_index = memory0[head_ptr];
           ^ ~~~~~~~~~~~~~~~~~
TUpqP_Ptr2Arr.c:57:7: error: use of undeclared identifier 'head'
  if (head == NULL || memory1[head].value >= m) {
      ^
TUpqP_Ptr2Arr.c:57:31: error: use of undeclared identifier 'head'
  if (head == NULL || memory1[head].value >= m) {
                              ^
TUpqP_Ptr2Arr.c:58:25: error: use of undeclared identifier 'head'
    memory1[new].next = head;
                        ^
TUpqP_Ptr2Arr.c:59:23: warning: incompatible integer to pointer conversion assigning to 'struct list *' from 'int' [-Wint-conversion]
    memory0[head_ptr] = new;
                      ^ ~~~
TUpqP_Ptr2Arr.c:63:14: error: use of undeclared identifier 'head'
  int curr = head;
             ^
TUpqP_Ptr2Arr.c:71:23: error: use of undeclared identifier 'head'
  memory0[head_ptr] = head;
                      ^
3 warnings and 5 errors generated.
